--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Busca de Escolas Municipais</title>
+    <link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <h1>🏫 Busca de Escolas Municipais</h1>
+            <h1>🏫 Busca de Escolas Municipais de Catanduva/SP</h1>
             <p>Encontre escolas municipais com filtros avançados de pesquisa</p>
         </div>
 
@@ -54,6 +56,21 @@
         </div>
     </div>
 
+    <footer>
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/rosicleidi-da-silva-barbosa-79a131114" target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/Rosi-SB/" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+        </div>
+        <div id="anoAtual"></div>
+        <div>Desenvolvido por <a href="https://github.com/Rosi-SB" target="_blank">RosiSB</a></div>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="script.js"></script>
 </body>
 
