--- a/index.html
+++ b/index.html
@@ -65,8 +65,15 @@
                 <i class="fa-brands fa-github"></i>
             </a>
         </div>
-        <div id="anoAtual"></div>
+        
+        <div>
+            <p>Informações extraídas da página oficial
+                <a href="https://www.catanduva.sp.gov.br/escolas-municipais" target="_blank">
+                    Prefeitura de Catanduva-SP</a>
+            </p>
+        </div>
         <div>Desenvolvido por <a href="https://github.com/Rosi-SB" target="_blank">RosiSB</a></div>
+        <div id="anoAtual"></div>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
